--- a/index.html
+++ b/index.html
@@ -3188,6 +3188,8 @@
                         Farnham (Québec) J2N 1Y8<br>
                         Canada
                     </p>
+                    <a href="//www.dmca.com/Protection/Status.aspx?ID=4cbea599-a7b4-4b49-8c87-c8415fffb753" title="DMCA.com Protection Status" class="dmca-badge" style="margin-top: 10px; display: inline-block;"> <img src="https://images.dmca.com/Badges/dmca_protected_sml_120n.png?ID=4cbea599-a7b4-4b49-8c87-c8415fffb753" alt="DMCA.com Protection Status" /></a>
+                    <script src="https://images.dmca.com/Badges/DMCABadgeHelper.min.js"></script>
                 </div>
             </div>
             <div class="footer-bottom">
