--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Constructo AI | ERP Construction Québec - Gestion de chantiers</title>
-    <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction au Québec. Soumissions, facturation, suivi de chantiers, pointage CCQ, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ et Loi 16. Essai gratuit 7 jours.">
-    <meta name="keywords" content="ERP construction, logiciel construction Québec, gestion projet construction, devis construction, comptabilité construction, RBQ, CCQ, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier">
+    <title>Constructo AI | ERP Construction & Fabrication Québec - Gestion de projets</title>
+    <meta name="description" content="Constructo AI : le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication/soudure au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
+    <meta name="keywords" content="ERP construction, ERP fabrication, logiciel soudure Québec, logiciel construction Québec, gestion projet construction, gestion atelier fabrication, devis construction, devis soudure, comptabilité construction, RBQ, CCQ, CWB, CSA W47.1, CSA W47.2, AWS, Loi 16, IA construction, Constructo AI, logiciel entrepreneur, soumission construction, gestion chantier, gestion atelier soudure">
     <meta name="author" content="Sylvain Leduc - Constructo AI Inc.">
     <meta name="robots" content="index, follow">
 
@@ -15,8 +15,8 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
-    <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction avec un seul logiciel. Soumissions rapides, facturation TPS/TVQ, suivi de projets, pointage des employés, gestion de stocks. 33+ modules conçus pour les entrepreneurs québécois. Conforme RBQ, CCQ, Loi 16. Essai gratuit 7 jours.">
+    <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction et fabrication au Québec">
+    <meta property="og:description" content="Gérez votre entreprise de construction OU de fabrication/soudure avec un seul logiciel. Soumissions rapides, facturation TPS/TVQ, suivi de projets, pointage des employés, gestion de stocks. 33+ modules. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -26,8 +26,8 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:url" content="https://constructoai.ca/">
-    <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction au Québec">
-    <meta name="twitter:description" content="Le logiciel de gestion tout-en-un pour les entrepreneurs en construction au Québec. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, Loi 16.">
+    <meta name="twitter:title" content="Constructo AI | ERP intelligent pour la construction et fabrication au Québec">
+    <meta name="twitter:description" content="Le logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication/soudure au Québec. 33+ modules, 61 conseillers IA 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1.">
     <meta name="twitter:image" content="https://constructoai.ca/og-image.png">
     <meta name="twitter:site" content="@constructoai">
 
@@ -47,7 +47,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction au Québec. Soumissions, facturation, suivi de chantiers, pointage CCQ, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ et Loi 16.",
+        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication/soudure au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
@@ -80,7 +80,7 @@
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
         "name": "Constructo AI Inc.",
-        "description": "Développeur du système ERP Constructo AI pour l'industrie de la construction au Québec.",
+        "description": "Développeur du système ERP Constructo AI pour les industries de la construction et de la fabrication/soudure au Québec.",
         "url": "https://constructoai.ca",
         "telephone": "+1-514-820-1972",
         "email": "info@constructoai.ca",
@@ -1938,6 +1938,7 @@
             </a>
             <nav class="nav">
                 <a href="#fonctionnalites">Fonctionnalités</a>
+                <a href="#fabrication" style="color: var(--orange);">Fabrication/Soudure</a>
                 <a href="#api">Intégrations</a>
                 <a href="#comparaison">Comparaison</a>
                 <a href="#contact">Contact</a>
@@ -1963,12 +1964,12 @@
                 <img src="logo.png" alt="Constructo AI">
             </div>
             <h1>Constructo AI</h1>
-            <p class="hero-subtitle">Le logiciel de gestion conçu pour les entrepreneurs en construction du Québec</p>
+            <p class="hero-subtitle">Le logiciel de gestion conçu pour les entrepreneurs en <strong>construction</strong> et <strong>fabrication/soudure</strong> du Québec</p>
             <p class="hero-description">
-                Regroupez toutes vos opérations au même endroit. <strong>33+ outils pensés pour votre réalité</strong> : faites vos soumissions avec plus de 140 items de construction prêts à l'emploi, suivez vos chantiers en temps réel, gérez votre facturation avec TPS/TVQ automatiques, pointez vos employés selon les 61 métiers CCQ, gardez le contrôle sur vos sous-traitants, fournisseurs et inventaires. Tout ça dans un seul logiciel.
+                Regroupez toutes vos opérations au même endroit. <strong>33+ outils pensés pour votre réalité</strong> : faites vos soumissions avec plus de 140 items prêts à l'emploi, suivez vos projets et chantiers en temps réel, gérez votre facturation avec TPS/TVQ automatiques, pointez vos employés (61 métiers CCQ + postes de fabrication), gardez le contrôle sur vos sous-traitants, fournisseurs et inventaires. Tout ça dans un seul logiciel.
             </p>
             <p class="hero-description" style="margin-top: -15px;">
-                <strong>61 conseillers disponibles jour et nuit</strong> — comme avoir un estimateur, un comptable et un directeur de chantier à portée de main, 24 heures sur 24. <strong>Déjà conforme</strong> aux exigences de la RBQ, de la CCQ et de la CNESST. Occupez-vous de vos chantiers, on s'occupe de la paperasse.
+                <strong>61 conseillers disponibles jour et nuit</strong> — comme avoir un estimateur, un comptable et un directeur à portée de main, 24 heures sur 24. <strong>Déjà conforme</strong> aux exigences de la RBQ, CCQ, CNESST <em>et</em> certifications soudure CWB, CSA W47.1. Occupez-vous de vos projets, on s'occupe de la paperasse.
             </p>
             <div class="hero-buttons">
                 <a href="https://app.constructoai.ca/" class="btn btn-primary">
@@ -1998,19 +1999,19 @@
             <div class="stats-grid">
                 <div class="stat-item">
                     <div class="stat-number">33+</div>
-                    <div class="stat-label">Outils pour gérer vos chantiers</div>
+                    <div class="stat-label">Outils pour gérer vos projets</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">140+</div>
-                    <div class="stat-label">Items de construction prêts à utiliser</div>
+                    <div class="stat-label">Items construction & fabrication</div>
                 </div>
                 <div class="stat-item">
                     <div class="stat-number">61</div>
-                    <div class="stat-label">Conseillers disponibles 24/7</div>
+                    <div class="stat-label">Conseillers IA disponibles 24/7</div>
                 </div>
                 <div class="stat-item">
-                    <div class="stat-number">61</div>
-                    <div class="stat-label">Métiers CCQ intégrés</div>
+                    <div class="stat-number">18+</div>
+                    <div class="stat-label">Postes de travail fabrication/soudure</div>
                 </div>
             </div>
         </div>
@@ -2067,7 +2068,7 @@
     <section class="solution-section" id="fonctionnalites">
         <div class="solution-inner">
             <h2 class="section-title">Des outils faits pour votre métier</h2>
-            <p class="section-subtitle">33+ fonctionnalités pensées pour les entrepreneurs en construction</p>
+            <p class="section-subtitle">33+ fonctionnalités pensées pour les entrepreneurs en construction ET fabrication/soudure</p>
             <h3>Ce que vous utilisez tous les jours</h3>
 
             <div class="features-grid">
@@ -2426,6 +2427,80 @@
                     </div>
                     <h4>Subventions Québec 2025</h4>
                     <p>Plus de 50 programmes de subventions pour entrepreneurs. PME, construction, énergie, formation, innovation. Le système vérifie automatiquement si vous êtes éligible et vous guide dans vos demandes.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Fabrication/Soudure Section -->
+    <section class="solution-section" id="fabrication" style="background: linear-gradient(135deg, var(--gray-900) 0%, var(--gray-800) 100%);">
+        <div class="solution-inner">
+            <h2 class="section-title" style="color: var(--orange);">Nouveau : Module Fabrication & Soudure</h2>
+            <p class="section-subtitle" style="color: var(--gray-300);">Conçu spécifiquement pour les ateliers de fabrication métallique et entreprises de soudure du Québec</p>
+            <h3 style="color: var(--white);">18 postes de travail préconfigurés</h3>
+
+            <div class="features-grid">
+                <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
+                    <div class="feature-icon" style="background: rgba(249, 115, 22, 0.15);">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#f97316" stroke-width="2">
+                            <path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/>
+                        </svg>
+                    </div>
+                    <h4 style="color: var(--white);">Postes de découpe</h4>
+                    <p style="color: var(--gray-400);">Débitage, Cisaillement, Poinçonneuse, Plasma, Laser — tous vos postes de découpe configurés avec taux horaire de 90$/h.</p>
+                </div>
+                <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
+                    <div class="feature-icon" style="background: rgba(249, 115, 22, 0.15);">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#f97316" stroke-width="2">
+                            <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                            <path d="M2 17l10 5 10-5"/>
+                            <path d="M2 12l10 5 10-5"/>
+                        </svg>
+                    </div>
+                    <h4 style="color: var(--white);">Formage & Pliage</h4>
+                    <p style="color: var(--gray-400);">Postes de pliage et mise en forme des métaux. Suivi des temps par opération et par projet.</p>
+                </div>
+                <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
+                    <div class="feature-icon" style="background: rgba(249, 115, 22, 0.15);">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#f97316" stroke-width="2">
+                            <circle cx="12" cy="12" r="3"/>
+                            <path d="M12 1v6M12 17v6M4.22 4.22l4.24 4.24M15.54 15.54l4.24 4.24M1 12h6M17 12h6M4.22 19.78l4.24-4.24M15.54 8.46l4.24-4.24"/>
+                        </svg>
+                    </div>
+                    <h4 style="color: var(--white);">Soudure manuelle</h4>
+                    <p style="color: var(--gray-400);">MIG/MAG, TIG, Arc, Spotweld — tous les procédés de soudage. Certifications CWB et CSA W47.1/W47.2 intégrées.</p>
+                </div>
+                <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
+                    <div class="feature-icon" style="background: rgba(249, 115, 22, 0.15);">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#f97316" stroke-width="2">
+                            <rect x="2" y="2" width="20" height="8" rx="2"/>
+                            <rect x="2" y="14" width="20" height="8" rx="2"/>
+                            <path d="M6 6h.01M6 18h.01"/>
+                        </svg>
+                    </div>
+                    <h4 style="color: var(--white);">Robots soudeurs</h4>
+                    <p style="color: var(--gray-400);">Robot MIG, Robot TIG, Robot par points, Cellules robotisées — capacité 16h/jour (2 quarts). Suivi de production automatisé.</p>
+                </div>
+                <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
+                    <div class="feature-icon" style="background: rgba(249, 115, 22, 0.15);">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#f97316" stroke-width="2">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+                            <path d="M9 12l2 2 4-4"/>
+                        </svg>
+                    </div>
+                    <h4 style="color: var(--white);">Certifications soudure</h4>
+                    <p style="color: var(--gray-400);">CWB (Canadian Welding Bureau), CSA W47.1 (Acier), CSA W47.2 (Aluminium), AWS. Suivi des certifications de vos soudeurs.</p>
+                </div>
+                <div class="feature-card" style="background: var(--gray-800); border-color: var(--gray-700);">
+                    <div class="feature-icon" style="background: rgba(249, 115, 22, 0.15);">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="#f97316" stroke-width="2">
+                            <path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/>
+                            <polyline points="3.27,6.96 12,12.01 20.73,6.96"/>
+                            <line x1="12" y1="22.08" x2="12" y2="12"/>
+                        </svg>
+                    </div>
+                    <h4 style="color: var(--white);">Finition & Expédition</h4>
+                    <p style="color: var(--gray-400);">Ébavurage, Lavage, Peinture, Assemblage, Inspection qualité, Emballage — du début à la livraison.</p>
                 </div>
             </div>
         </div>
@@ -2971,7 +3046,7 @@
                             </div>
                             <div class="message-content">
                                 <p><strong>Bonjour! Je suis Sylvain Leduc</strong>, le créateur de Constructo AI.</p>
-                                <p>Bienvenue sur <strong>Constructo AI</strong>, le logiciel de gestion pour les entrepreneurs en construction au Québec.</p>
+                                <p>Bienvenue sur <strong>Constructo AI</strong>, le logiciel de gestion pour les entrepreneurs en construction et fabrication/soudure au Québec.</p>
                                 <p style="margin-top: 12px;"><strong>Comment puis-je vous aider?</strong></p>
                                 <ul class="help-options">
                                     <li>Créer un compte pour mon entreprise</li>
@@ -3147,12 +3222,13 @@
                         <img src="logo.png" alt="Constructo AI" style="width: 36px; height: auto;">
                         Constructo AI
                     </a>
-                    <p>Le logiciel de gestion créé par un entrepreneur, pour les entrepreneurs. 33+ outils pour gérer vos chantiers, 61 conseillers disponibles jour et nuit, portail client pour vos commandes, visionneuse de plans. Conforme aux normes RBQ, CCQ et Loi 16.</p>
+                    <p>Le logiciel de gestion créé par un entrepreneur, pour les entrepreneurs en construction et fabrication/soudure. 33+ outils, 61 conseillers disponibles 24/7, portail client. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.</p>
                 </div>
                 <div class="footer-section">
                     <h4>Explorer</h4>
                     <ul>
                         <li><a href="#fonctionnalites">Fonctionnalités</a></li>
+                        <li><a href="#fabrication" style="color: var(--orange);">Fabrication/Soudure</a></li>
                         <li><a href="#experts">Les 61 conseillers</a></li>
                         <li><a href="#comparaison">Pourquoi Constructo AI</a></li>
                         <li><a href="#faq">Questions fréquentes</a></li>
