--- a/index.html
+++ b/index.html
@@ -2176,6 +2176,17 @@
                 <div class="feature-card">
                     <div class="feature-icon">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"/>
+                            <line x1="9" y1="13" x2="15" y2="13"/>
+                            <line x1="9" y1="17" x2="13" y2="17"/>
+                        </svg>
+                    </div>
+                    <h4>Gestion de Dossiers</h4>
+                    <p>Regroupez tous les documents d'un projet au même endroit : plans, photos, contrats, factures. Suivez l'avancement avec une checklist de 12 étapes, de la demande reçue jusqu'au paiement. Liez vos devis et bons de travail. L'historique complet de chaque dossier est tracé automatiquement.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"/>
                             <polyline points="9,22 9,12 15,12 15,22"/>
                         </svg>
