--- a/index.html
+++ b/index.html
@@ -2410,6 +2410,60 @@
                 <div class="feature-card">
                     <div class="feature-icon">
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <circle cx="12" cy="12" r="3"/>
+                            <path d="M12 1v6M12 17v6M4.22 4.22l4.24 4.24M15.54 15.54l4.24 4.24M1 12h6M17 12h6M4.22 19.78l4.24-4.24M15.54 8.46l4.24-4.24"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Soudure</h4>
+                    <p>Calculez vos soudures selon les normes CSA W47.1 et AWS D1.1. Dimensionnement des joints, apport de chaleur, consommation d'électrodes, préchauffage requis. MIG, TIG, Arc — tous les procédés couverts. Certifications CWB intégrées.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 2L2 7l10 5 10-5-10-5z"/>
+                            <path d="M2 17l10 5 10-5"/>
+                            <path d="M2 12l10 5 10-5"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Pliage Tôle</h4>
+                    <p>Calculez vos développés de tôle comme un pro. Facteur K, tolérance de pliage, tonnage requis, retour élastique. Le logiciel vous dit quelle matrice V utiliser et l'angle de sur-pliage. Acier, inox, aluminium — tous les métaux.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <rect x="3" y="3" width="18" height="18" rx="2"/>
+                            <path d="M3 9h18"/>
+                            <path d="M9 21V9"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Poids Métaux</h4>
+                    <p>Calculez le poids de vos pièces métalliques en quelques clics. Tôles, barres, tubes, profilés W et C — 18 types de métaux avec densités exactes. Acier, inox 304/316, aluminium, cuivre. Normes CSA G40.21 et ASTM.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M19 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2V5a2 2 0 0 0-2-2z"/>
+                            <path d="M12 8v8"/>
+                            <path d="M8 12h8"/>
+                        </svg>
+                    </div>
+                    <h4>Calcul Peinture</h4>
+                    <p>Calculez vos quantités de peinture selon les normes ASTM. Surfaces, nombre de couches, épaisseur de film sec (DFT). Latex, alkyde, époxy, polyuréthane — temps de séchage et recouvrement inclus. Conforme aux règles VOC du Québec.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
+                            <polyline points="14,2 14,8 20,8"/>
+                            <path d="M9 15l2 2 4-4"/>
+                        </svg>
+                    </div>
+                    <h4>Métré sur Plans PDF</h4>
+                    <p>Téléversez vos plans PDF et mesurez directement à l'écran. Distance, surface, périmètre, angles — calibrez l'échelle et le logiciel calcule tout automatiquement. Associez vos mesures à des produits pour générer vos soumissions en un clic.</p>
+                </div>
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                             <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8z"/>
                             <polyline points="14,2 14,8 20,8"/>
                             <line x1="16" y1="13" x2="8" y2="13"/>
