--- a/index.html
+++ b/index.html
@@ -1938,7 +1938,7 @@
             </a>
             <nav class="nav">
                 <a href="#fonctionnalites">Fonctionnalités</a>
-                <a href="#fabrication" style="color: var(--orange);">Fabrication/Soudure</a>
+                <a href="#fabrication" style="color: var(--orange);">Fabrication</a>
                 <a href="#api">Intégrations</a>
                 <a href="#comparaison">Comparaison</a>
                 <a href="#contact">Contact</a>
@@ -2497,7 +2497,7 @@
         </div>
     </section>
 
-    <!-- Fabrication/Soudure Section -->
+    <!-- Fabrication Section -->
     <section class="solution-section" id="fabrication" style="background: linear-gradient(135deg, var(--gray-900) 0%, var(--gray-800) 100%);">
         <div class="solution-inner">
             <h2 class="section-title" style="color: var(--orange);">Nouveau : Module Fabrication & Soudure</h2>
@@ -3293,7 +3293,7 @@
                     <h4>Explorer</h4>
                     <ul>
                         <li><a href="#fonctionnalites">Fonctionnalités</a></li>
-                        <li><a href="#fabrication" style="color: var(--orange);">Fabrication/Soudure</a></li>
+                        <li><a href="#fabrication" style="color: var(--orange);">Fabrication</a></li>
                         <li><a href="#experts">Les 61 conseillers</a></li>
                         <li><a href="#comparaison">Pourquoi Constructo AI</a></li>
                         <li><a href="#faq">Questions fréquentes</a></li>
