--- a/index.html
+++ b/index.html
@@ -2500,7 +2500,7 @@
     <!-- Fabrication Section -->
     <section class="solution-section" id="fabrication" style="background: linear-gradient(135deg, var(--gray-900) 0%, var(--gray-800) 100%);">
         <div class="solution-inner">
-            <h2 class="section-title" style="color: var(--orange);">Nouveau : Module Fabrication & Soudure</h2>
+            <h2 class="section-title" style="color: var(--orange);">Nouveau : Module Fabrication</h2>
             <p class="section-subtitle" style="color: var(--gray-300);">Conçu spécifiquement pour les ateliers de fabrication métallique et entreprises de soudure du Québec</p>
             <h3 style="color: var(--white);">18 postes de travail préconfigurés</h3>
 
