Update Open Graph description for clarity

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://constructoai.ca/">
     <meta property="og:title" content="Constructo AI | ERP intelligent pour la construction et fabrication au Québec">
-    <meta property="og:description" content="Gérez votre entreprise de construction OU de fabrication/soudure avec un seul logiciel. Soumissions rapides, facturation TPS/TVQ, suivi de projets, pointage des employés, gestion de stocks. 33+ modules. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
+    <meta property="og:description" content="Gérez votre entreprise de construction OU de fabrication avec un seul logiciel. Soumissions rapides, facturation TPS/TVQ, suivi de projets, pointage des employés, gestion de stocks. 33+ modules. Conforme RBQ, CCQ, CWB, CSA W47.1. Essai gratuit 7 jours.">
     <meta property="og:image" content="https://constructoai.ca/og-image.png">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
@@ -47,7 +47,7 @@
         "name": "Constructo AI",
         "applicationCategory": "BusinessApplication",
         "operatingSystem": "Web",
-        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication/soudure au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
+        "description": "Logiciel de gestion tout-en-un pour les entrepreneurs en construction ET fabrication au Québec. Soumissions, facturation, suivi de projets, pointage, gestion d'équipe. 33+ modules, 61 conseillers IA disponibles 24/7. Conforme RBQ, CCQ, CWB, CSA W47.1 et Loi 16.",
         "url": "https://constructoai.ca",
         "author": {
             "@type": "Person",
