Update hero subtitle for clarity

--- a/index.html
+++ b/index.html
@@ -1964,7 +1964,7 @@
                 <img src="logo.png" alt="Constructo AI">
             </div>
             <h1>Constructo AI</h1>
-            <p class="hero-subtitle">Le logiciel de gestion conçu pour les entrepreneurs en <strong>construction</strong> et <strong>fabrication/soudure</strong> du Québec</p>
+            <p class="hero-subtitle">Le logiciel de gestion conçu pour les entrepreneurs en <strong>construction</strong> et <strong>fabrication</strong> du Québec</p>
             <p class="hero-description">
                 Regroupez toutes vos opérations au même endroit. <strong>33+ outils pensés pour votre réalité</strong> : faites vos soumissions avec plus de 140 items prêts à l'emploi, suivez vos projets et chantiers en temps réel, gérez votre facturation avec TPS/TVQ automatiques, pointez vos employés (61 métiers CCQ + postes de fabrication), gardez le contrôle sur vos sous-traitants, fournisseurs et inventaires. Tout ça dans un seul logiciel.
             </p>
